--- a/DockerfileKeystoneMySqlDefault
+++ b/DockerfileKeystoneMySqlDefault
@@ -1,21 +1,15 @@
 FROM mattdm/fedora
-MAINTAINER Neependra Khare 
-RUN date
+MAINTAINER Neependra Khare <nkhare@redhat.com> 
 #RUN yum update -y
-RUN yum install git python-pip vim gcc glibc-devel glibc-headers -y
+RUN yum install python-pip gcc glibc-devel glibc-headers python-devel libxml2 libxml2-devel libxslt-devel libxslt -y || ping -c 1 google.com
+RUN yum install vim git mysql-server screen l openstack-utils  install MySQL-python -y || ping -c 1 google.com
 RUN mkdir -p /opt
 RUN cd /opt && git clone http://github.com/openstack/keystone.git
-RUN yum install python-devel -y
-RUN yum install libxml2 libxml2-devel libxslt-devel libxslt  -y
 RUN cd /opt/keystone && pip install -r requirements.txt
-RUn cd /opt/keystone && python setup.py install
-RUN yum install mysql-server screen -y
+RUN cd /opt/keystone && python setup.py install
 RUN mysql_install_db --user=mysql --basedir=/usr/ --ldata=/var/lib/mysql/
 RUN cd /opt/ && git clone https://github.com/nkhare/keystone-performance.git
-RUN yum install openstack-utils -y || date
-RUN chmod a+x /opt/keystone-performance/keystone_setup.sh
 EXPOSE 35357
 EXPOSE 5000
-RUN yum install MySQL-python -y
-RUN ip addr
+RUN chmod a+x /opt/keystone-performance/keystone_setup.sh
 ENTRYPOINT ["/opt/keystone-performance/keystone_setup.sh"]
